# advent-of-code

./: .gitignore  README.md
2025/: Cargo.toml
2025/all_days/: Cargo.toml
2025/all_days/src/: main.rs
2025/d1/: Cargo.toml
2025/d1/src/: a.rs  b.rs  main.rs
2025/d2/: Cargo.toml
2025/d2/src/: a.rs  b.rs  main.rs
2025/d3/: Cargo.toml
2025/d3/src/: a.rs  b.rs  main.rs
2025/d4/: Cargo.toml
2025/d4/src/: a.rs  b.rs  main.rs
2025/d5/: Cargo.toml
2025/d5/src/: a.rs  b.rs  lib.rs  main.rs
2025/d6/: Cargo.toml
2025/d6/src/: a.rs  b.rs  main.rs
2025/d7/: Cargo.toml
2025/d7/src/: a.rs  b.rs  main.rs
2025/d8/: Cargo.toml
2025/d8/src/: a.rs  b.rs  main.rs
2025/d9/: Cargo.toml
2025/d9/src/: a.rs  b.rs  main.rs
template/: Cargo.toml
template/src/: a.rs  main.rs
